syntax = "proto3";

option csharp_namespace = "Grpc.APIs";

package greet;

service UserService {
  rpc CreateUser (User) returns (Response);
  rpc UpdateUser (User) returns (Response);
  rpc DeleteUser (User) returns (Response);
  rpc GetUser (GetUserRequest) returns (User);
}


message User {
  string firstName = 1;
  string lastName = 2;
  int32 age = 3;
}
message Response {
  string message = 1;
  bool success = 2;
}
message GetUserRequest {
  int32 id = 1; 
}